--- a/app/views/stacks/index.html.erb
+++ b/app/views/stacks/index.html.erb
@@ -1,4 +1,6 @@
 <h1>All Stacks</h1>
+<!-- TODO: Instead of tab-like interface, start off by listing all the stacks ordered 
+alpahbetially by name and give the user the option of filtering stacks by type or name. -->
 <div id="auto-generated-stacks">
 	<h2>Automatically Generated Stacks</h2>
 	<ul class="clearer">
