--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,16 @@
 </head>
 <body>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<ul id="login-logout">
+	<% unless user_signed_in? %>
+		<li><%= link_to 'login', new_user_session_path %></li>
+	<% else %>
+		<li><%= current_user.email %></li>
+		<li><%= link_to 'logout', destroy_user_session_path,
+            	  method: :delete %></li>
+	<% end %>
+</ul>
+
 
 <%= yield %>
 
