--- a/app/views/stacks/generated_stack.html.erb
+++ b/app/views/stacks/generated_stack.html.erb
@@ -1,8 +1,5 @@
 <h1><%= @stack_title %></h1>
-    <% if flash[:notice] %> 
-    	<div class="notice"><%= flash[:notice] %></div>
-    	<% flash[:notice] = nil %>
-    <% end %>
+<%= render partial: 'home/flash' %> 
 	<div class="flashcards-list">
 	   <% size =  @flashcards.count %>
 	   <% num_per_row = 3 %> 
