--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,21 +5,95 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,600i,700|News+Cycle:400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
 
-<ul id="login-logout">
-	<% unless user_signed_in? %>
-		<li><%= link_to 'login', new_user_session_path %></li>
-	<% else %>
-		<li><%= current_user.email %></li>
-		<li><%= link_to 'logout', destroy_user_session_path,
-            	  method: :delete %></li>
-	<% end %>
-</ul>
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <% if user_signed_in? %>
+          	<a class="navbar-brand" href="/">bonbons</a>
+          <% end %>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+          	<% unless user_signed_in? then %>
+            	<li>
+            		<a href="/" class="active">home</a>
+            	</li>
+            <% end %> 
+
+            <% if user_signed_in? %> 
+	            <li><a href="/flashcards/new_batch">Dashboard</a></li>
+	            <li class="dropdown">
+	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Flashcards<span class="caret"></span></a>
+	              <ul class="dropdown-menu">
+	                <li><a href="/flashcards/new_batch">Create</a></li>
+	                <li><a href="/flashcards">View All Existing</a></li>
+	                <li><a href="#">Something else here</a></li>
+	                <li role="separator" class="divider"></li>
+	                <li class="dropdown-header">Nav header</li>
+	                <li><a href="#">Separated link</a></li>
+	                <li><a href="#">One more separated link</a></li>
+	              </ul>
+	            </li>
+	            <li class="dropdown">
+	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tags<span class="caret"></span></a>
+	              <ul class="dropdown-menu">
+	                <li><a href="/user_defined_tags/new">Create</a></li>
+	                <li><a href="/tags">View All</a></li>
+	                <li><a href="#">Something else here</a></li>
+	                <li role="separator" class="divider"></li>
+	                <li class="dropdown-header">Nav header</li>
+	                <li><a href="#">Separated link</a></li>
+	                <li><a href="#">One more separated link</a></li>
+	              </ul>
+	            </li>
+	            <li class="dropdown">
+	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stacks<span class="caret"></span></a>
+	              <ul class="dropdown-menu">
+	                <li><a href="/flashcards/new_batch">Generate</a></li>
+	                <li><a href="/stacks">View All</a></li>
+	                <li><a href="#">Use Stack</a></li>
+	                <li role="separator" class="divider"></li>
+	                <li class="dropdown-header">Nav header</li>
+	                <li><a href="#">Separated link</a></li>
+	                <li><a href="#">One more separated link</a></li>
+	              </ul>
+	            </li>
+	        <% end %> 
+
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+          	<% unless user_signed_in? %>
+	            <li><%= link_to 'login', new_user_session_path %></li>
+	            <li><%= link_to 'sign up', new_user_registration_path %></li>
+	        <% else %>
+				<li><%= link_to current_user.email, 'user_profile' %></li>
+				<li><%= link_to 'logout', destroy_user_session_path,
+            			  method: :delete %></li>
+	        <% end %> 
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
 
-<%= yield %>
-
+	<div class="container">
+	    <!-- <div class="jumbotron"> -->	
+	    <div class="body-container">
+			<%= yield %>
+		</div>
+		<!-- </div> -->
+	
+	</div>
 </body>
 </html>
