Fixed drop down menu style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,12 +37,7 @@
 	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Flashcards<span class="caret"></span></a>
 	              <ul class="dropdown-menu">
 	                <li><a href="/flashcards/new_batch">Create</a></li>
-	                <li><a href="/flashcards">View All Existing</a></li>
-	                <li><a href="#">Something else here</a></li>
-	                <li role="separator" class="divider"></li>
-	                <li class="dropdown-header">Nav header</li>
-	                <li><a href="#">Separated link</a></li>
-	                <li><a href="#">One more separated link</a></li>
+	                <li><a href="/flashcards">View All</a></li>
 	              </ul>
 	            </li>
 	            <li class="dropdown">
@@ -50,11 +45,6 @@
 	              <ul class="dropdown-menu">
 	                <li><a href="/user_defined_tags/new">Create</a></li>
 	                <li><a href="/tags">View All</a></li>
-	                <li><a href="#">Something else here</a></li>
-	                <li role="separator" class="divider"></li>
-	                <li class="dropdown-header">Nav header</li>
-	                <li><a href="#">Separated link</a></li>
-	                <li><a href="#">One more separated link</a></li>
 	              </ul>
 	            </li>
 	            <li class="dropdown">
@@ -63,10 +53,6 @@
 	                <li><a href="/flashcards/new_batch">Generate</a></li>
 	                <li><a href="/stacks">View All</a></li>
 	                <li><a href="#">Use Stack</a></li>
-	                <li role="separator" class="divider"></li>
-	                <li class="dropdown-header">Nav header</li>
-	                <li><a href="#">Separated link</a></li>
-	                <li><a href="#">One more separated link</a></li>
 	              </ul>
 	            </li>
 	        <% end %> 
