--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -2,17 +2,60 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .flashcard{
-	border: 1px solid black; 
-	padding: 10px; 
-}
-.flashcard-container{
-	width: 30%;
-	float: left; 
-	margin: 2px;
+
+	.front,.back{
+		border: 1px solid #bcbcbc; 
+		background-color: white; 
+		height: 400px; 
+		padding: 10px;
+
+		-webkit-box-shadow: -8px 8px 4px 1px rgba(0,0,0,0.10);
+		-moz-box-shadow: -8px 8px 4px 1px rgba(0,0,0,0.10);
+		box-shadow: -8px 8px 4px 1px rgba(0,0,0,0.10);
+	}
+
+	.image{
+		height: 14em; 
+
+		img{
+			max-width: 100%;
+			max-height: 100%;
+			object-fit: cover; 
+		}
+	}
+
+	.orig-word{
+		font-size: 2em;
+		text-align: center;  
+	}
+
+	.translation {
+		font-size: 2em;
+		text-align: center;
+		line-height: 10em;   
+	}
 }
 
-.flashcard-container:after{
-	clear: both; 
+.side-body{
+	height: 95%; 
+}
+
+.side-footer { 
+	height: 5%;
+	ul {
+		float: left; 
+		margin-left: -2.5em;
+
+		li {
+
+			display: inline-block; 
+			padding-right: 5px;
+		}
+	}
+
+	 .flip { 
+		float: right; 
+	}
 }
 
 .edit-flashcard{
