--- a/app/assets/stylesheets/home.scss.erb
+++ b/app/assets/stylesheets/home.scss.erb
@@ -43,11 +43,22 @@ $darkest-shade-of-grey: #e0e0e0;
 body{
 	background-color: $lightest-shade-of-grey !important;
     font-family: 'Josefin Sans', sans-serif !important;
+    font-weight: 400;
 }
-.body-container{
-	font-size: 18px !important; 
+.inner-container{
+	font-family: 'Helvetica', sans-serif !important;
+	font-size: 11pt !important; 
 	a:visited, a:link{
 		color: $bright-pink-link !important; 
+	}
+
+    @for $index from 1 through 6 {
+  		h#{$index}{
+    		font-weight: 600 !important; 
+    		font-family: 'Josefin Sans', sans-serif !important;
+    		color: #5e5e5e !important;
+    		text-shadow: -2px 2px 0px rgba(150, 150, 150, 0.55) !important;
+  		}
 	}
 }
 
@@ -81,10 +92,8 @@ body{
 #auth-buttons {
 	a{
 		color: black !important; 
-		padding-left: 30px;
-		padding-right: 12px; 
-		padding-top: 10px;
-		padding-bottom: 10px;  
+		/* top | right | bottom | left */
+		padding: 10px 12px 10px 30px; 
 		border-radius: 10px;
 		width: 100px;  
 		-webkit-box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.15);
@@ -92,6 +101,7 @@ body{
 		box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.15);
 		margin-top: 10px; 
 		font-size: 12pt !important;
+		font-weight: 600;
 
 		&:nth-of-type(1){
 			float: left;
@@ -137,6 +147,7 @@ ul.center-horizontally, p.center-horizontally, div.center-horizontally{
 .cursor:after {
     content:"_";
     opacity: 0;
+    font-weight: 700; 
     animation: cursor 1s infinite;
 }
 
@@ -162,4 +173,6 @@ ul.center-horizontally, p.center-horizontally, div.center-horizontally{
 the auth buttons stagger */
 #splash{
 	width: 375px; 
+  font-family: 'Josefin Sans', sans-serif !important; 
+  font-size: 18px !important; 
 }
