--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
 
 	<div class="container">
 	    <!-- <div class="jumbotron"> -->	
-	    <div class="body-container">
+	    <div class="inner-container">
 			<%= yield %>
 		</div>
 		<!-- </div> -->
