--- a/app/views/flashcards/_single_flashcard.html.erb
+++ b/app/views/flashcards/_single_flashcard.html.erb
@@ -1,76 +1,76 @@
-<div class="col-xs-4">
+<div class="<%= col_class%>">
 	
 	<!--================FLASHCARD CODE===========================================-->
-	<div class="flashcard">
-	    <div class="front">
-	    	<div class="side-body">
-					<p class="orig-word"><%= f.orig_word %></p>
+	<div class="flashcard-container">
+		<div class="flashcard" id="<%= 'card_' + f.id.to_s %>">
+		    <div class="face front">
+		    	<div class="side-body">
+						<p class="orig-word"><%= f.orig_word %></p>
 
-					<div class="image">
-						<%= image_tag f.image.url, :class => "center-horizontally"%>
-					</div>
+						<div class="image">
+							<%= image_tag f.image.url, :class => "center-horizontally"%>
+						</div>
 
 
-			</div>
+				</div>
 
-			 <div class="side-footer">
+				 <div class="side-footer">
 
-						<ul>
+						<ul class="left">
 							<li class="<%= unless show_view_link then 'hide' else '' end %>"><%= link_to 'View', flashcard_path(f)%></li>
 							<li><%= link_to 'Edit', edit_flashcard_path(f) %></li>
 							<li><%= link_to 'Delete', flashcard_path(f),
-					            method: :delete,
-					            data: { confirm: 'Are you sure?' } %></li>
+			            			method: :delete,
+			              			data: { confirm: 'Are you sure?' } %></li>
 						</ul>
 
-						<%= link_to 'Flip', '', :class => 'flip'%>
+					<ul class="right"> 
+						<li class='flip' data-which-face='back' data-card-id="<%= 'card_' + f.id.to_s %>">Hover over to flip</li>
+						<li><a href="" id="tag-link">tags</a><span class="glyphicon glyphicon-tags" aria-hidden="true"></span></li>
+					</ul>
 
-			 </div>
-		</div>
-
-		<div class="back hide">
-			<div class="side-body">
-				<p class="translation"><%= f.translation %></p>
+				 </div>
 			</div>
 
-			 <div class="side-footer">
-				<ul>
-					<li class="<%= unless show_view_link then 'hide' else '' end %>"><%= link_to 'View', flashcard_path(f)%></li>
-					<li><%= link_to 'Edit', edit_flashcard_path(f) %></li>
-					<li><%= link_to 'Delete', flashcard_path(f),
-		            	method: :delete,
-		              	data: { confirm: 'Are you sure?' } %></li>
-				</ul>
-				
-				<%= link_to 'Flip', '', :class => 'flip' %>
-			 </div>
+			<div class="face back">
+				<div class="side-body">
+					<p class="translation"><%= f.translation %></p>
+				</div>
 
+				 <div class="side-footer">
+					<ul class="left">
+						<li class="<%= unless show_view_link then 'hide' else '' end %>"><%= link_to 'View', flashcard_path(f)%></li>
+						<li><%= link_to 'Edit', edit_flashcard_path(f) %></li>
+						<li><%= link_to 'Delete', flashcard_path(f),
+			            	method: :delete,
+			              	data: { confirm: 'Are you sure?' } %></li>
+					</ul>
+
+					<ul class="right"> 
+						<li class='flip' data-which-face='back' data-card-id="<%= 'card_' + f.id.to_s %>">Hover over to flip</li>
+						<li><a href="" id="tag-link">tags</a><span class="glyphicon glyphicon-tags" aria-hidden="true"></span></li>
+					</ul>
+				 </div>
+
+			</div>
 		</div>
 	</div>
 
 	<div class="flashcard-tags">
-		<h3>Tags</h3>
-		<ul>
-			<li><h4>Properties</h4>
-				<ul>
-					<li>
-				   		<% langs_link_label = l.from_lang.capitalize + " to " + l.to_lang.capitalize %>
-				   		<%= link_to langs_link_label, stacks_by_langs_path(l.code.sub('-','_')) %>
-					</li>
-					<li>
-						<% batch_link_label = 'batch ' + f.batch_id.to_s %>
-						<%= link_to batch_link_label, stacks_by_batch_path(f.batch_id) %> 
-					</li>
-				</ul>
+		<div class="clearer"></div>
+		<ul class="tag-list hide">
+			<% f.user_defined_tags.order(:name).each do |t| %>
+				<li><%= link_to t.name, stacks_by_user_defined_tag_path(t)%></li>
+			<% end %>
+
+			<li>
+				 <% langs_link_label = l.from_lang.capitalize + " to " + l.to_lang.capitalize %>
+				 <%= link_to langs_link_label, stacks_by_langs_path(l.code.sub('-','_')) %> </li>
+			<li>
+				<% batch_link_label = 'batch ' + f.batch_id.to_s %>
+				<%= link_to batch_link_label, stacks_by_batch_path(f.batch_id) %> 
 			</li>
-			<!-- TODO: Add link to user defined tag stacks -->
-			<li><h4>User Defined Tags</h4>
-				<ul>
-					<% f.user_defined_tags.each do |t| %>
-						<li><%= link_to t.name, ''%></li>
-					<% end %>
-				</ul>
-			</li>
+				
 		</ul>
 	</div>
 
