--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
     </nav>
 
 
-	<div class="container">
+	<div class="container main">
 	    <!-- <div class="jumbotron"> -->	
 	    <div class="inner-container">
 			<%= yield %>
@@ -81,5 +81,11 @@
 		<!-- </div> -->
 	
 	</div>
+
+  <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Powered by <a href="http://pixabay.com">Pixabay</a>, <a href="http://www.yandex.com">Yandex</a>, and Coffee.</span>
+      </div>
+    </footer>
 </body>
 </html>
