--- a/app/views/stacks/generated_stack.html.erb
+++ b/app/views/stacks/generated_stack.html.erb
@@ -17,7 +17,7 @@
 	   	    		<div class="row"> <!-- START STACK ROW --> 
 	   	    	<% end %>
 	   	    
-	   	    	<%= render partial: "flashcards/single_flashcard", locals: { f: fl, l: @langs[fl.id], show_view_link: true }%> 
+	   	    	<%= render partial: "flashcards/single_flashcard", locals: { f: fl, l: @langs[fl.id], show_view_link: true, col_class: "col-xs-4" }%> 
 
 	   	    	<% if (current_row % num_per_row == (num_per_row - 1)) || fl.id == @flashcards.last.id then %> 
 	   	    		</div> <!-- END STACK ROW -->
