--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,8 @@
 	              <ul class="dropdown-menu">
 	                <li><a href="/flashcards/new_batch">Generate</a></li>
 	                <li><a href="/stacks">View All</a></li>
-	                <li><a href="#">Use Stack</a></li>
+	                <li><a href="#">Study Stack</a></li>
+                  <li><a href="#">Print Stack</a></li>
 	              </ul>
 	            </li>
 	        <% end %> 
@@ -63,6 +64,15 @@
 	            <li><%= link_to 'login', new_user_session_path %></li>
 	            <li><%= link_to 'sign up', new_user_registration_path %></li>
 	        <% else %>
+          <li>
+                <form action="" class="search-form">
+                  <div class="form-group has-feedback">
+                    <label for="search" class="sr-only">Search</label>
+                    <input type="text" class="form-control" name="search" id="search" placeholder="search">
+                      <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                    </div>
+                </form>
+            </li>
 				<li><%= link_to current_user.email, 'user_profile' %></li>
 				<li><%= link_to 'logout', destroy_user_session_path,
             			  method: :delete %></li>
@@ -84,7 +94,7 @@
 
   <footer class="footer">
       <div class="container">
-        <span class="text-muted">Powered by <a href="http://pixabay.com">Pixabay</a>, <a href="http://www.yandex.com">Yandex</a>, and Coffee.</span>
+        <span class="text-muted">Powered by <a href="http://pixabay.com">Pixabay</a>, <a href="http://www.yandex.com">Yandex</a>  <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>  Made by <a href="http://monicagonsalves.com">Monica Gonsalves</a> with the aid of copious cups of coffee and <a href="<%= credits_path %>">many tools and websites</a>.</span>
       </div>
     </footer>
 </body>
