--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -11,13 +11,13 @@
   transition: all 1.0s linear;
 }
 
-.flashcard:hover .front{
+/*.flashcard:hover .front{
   transform: rotateY(-180deg);
 }
 
 .flashcard:hover .back {
  transform: rotateY(0deg);
-}
+}*/
 
 .face {
   backface-visibility: hidden;
@@ -25,7 +25,7 @@
   transition: 0.5s;
 }
 
-/* States of the faces before card is flipped! */
+/* States of the faces before card! */
 .face.front {
   transform: rotateY(0deg);
 } 
@@ -121,6 +121,19 @@
 			.glyphicon{
 				padding-left: 5px; 
 			}
+		}
+	}
+}
+
+.tag-list{
+	background-color: #e5e5e5 !important;
+	padding: 1em; 
+	display: none; 
+
+	li {
+		display: inline-block; 
+		&:after {
+			content: ', '
 		}
 	}
 }
