Fixed bug where image on edit page flips when clicked

--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -6,7 +6,7 @@
 .flashcard-container{
   perspective: 800px;
 }
-.flashcard{
+.flashcard-container .flashcard{
   transform-style: preserve-3d;
   transition: all 1.0s linear;
 }
