--- a/app/views/credits/index.html
+++ b/app/views/credits/index.html
@@ -13,5 +13,5 @@
 	<li><a href="">Freepik</a> for free candy icon</li>
 	<li><a href="">Canter font</a> is used in the logo</li>
 	<li><a href="">Google fonts</a> for the font Josefin Sans, which the headings, navigation links, footer, flashcards, and splash message on front page use.</li>
-	<li><a href="">Bootstrap</a> for the glyphicons grid system used to display the flashcards, and rapid theming.</li>
+	<li><a href="">Bootstrap</a> for the glyphicons and grid system used to display the flashcards, and rapid theming.</li>
 </ul>
