Last tag in tag list no longer has a comma after it

--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -129,10 +129,11 @@
 	background-color: #e5e5e5 !important;
 	padding: 1em; 
 	display: none; 
+	list-style: none; 
 
 	li {
-		display: inline-block; 
-		&:after {
+		display: inline; 
+		&:not(:last-of-type):after {
 			content: ', '
 		}
 	}
