Added more descriptive name for link that toggles tags

--- a/app/views/flashcards/_single_flashcard.html.erb
+++ b/app/views/flashcards/_single_flashcard.html.erb
@@ -26,7 +26,7 @@
 
 					<ul class="right"> 
 						<li class='flip'>Click to flip</li>
-						<li><a href="" class="tag-link" data-card-id="<%= 'card_' + f.id.to_s %>">Tags</a><span class="glyphicon glyphicon-tags" aria-hidden="true"></span></li>
+						<li><a href="" class="tag-link" data-card-id="<%= 'card_' + f.id.to_s %>">Toggle tags</a><span class="glyphicon glyphicon-tags" aria-hidden="true"></span></li>
 					</ul>
 
 				 </div>
@@ -48,7 +48,7 @@
 
 					<ul class="right"> 
 						<li class='flip'>Click to flip</li>
-						<li><a href="" class="tag-link" data-card-id="<%= 'card_' + f.id.to_s %>">Tags</a><span class="glyphicon glyphicon-tags" aria-hidden="true"></span></li>
+						<li><a href="" class="tag-link" data-card-id="<%= 'card_' + f.id.to_s %>">Toggle tags</a><span class="glyphicon glyphicon-tags" aria-hidden="true"></span></li>
 					</ul>
 				 </div>
 
