Some form styles

--- a/app/assets/stylesheets/home.scss.erb
+++ b/app/assets/stylesheets/home.scss.erb
@@ -67,6 +67,13 @@ body{
 	}
 }
 
+input[type="text"]:not(#search){
+  border-radius: 5px; 
+  border: 1px solid #aaaaaa;
+  padding: 6px;
+  width: 50%;
+}
+
 .dropdown-menu{
 	background-color:  $medium-shade-of-grey !important; 
 	li{
