Made tags on edit page a horizontal list instead of a vertical one

--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -165,7 +165,15 @@
 	.orig-word {
 		font-family: 'Josefin Sans', sans-serif !important; 
 	}
+
+	.user-defined-tags{
+
+		li{
+			display: inline-block; 
+		}
+	}
 }
+
 .hide{
 	display: none; 
 }
