--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -174,11 +174,39 @@
 	}
 }
 
+.generate-new-batch-form{
+	label{
+		display: block; 
+		font-size: 18px !important;
+		font-family: 'Josefin Sans', sans-serif !important; 
+		color: #4f4f4f !important; 
+	}
+	legend{
+		font-size: 25px !important; 
+		font-family: 'Josefin Sans', sans-serif !important; 
+		font-weight: 700;
+		color: #606060;
+		text-shadow: -2px 2px 0px rgba(150, 150, 150, 0.55) !important;
+	}
+	label[for='num_words_to_add']{
+		display: inline !important;  
+	}
+	#num_words_to_add {
+		width: 50px !important; 
+	}
+}
+
 .hide{
 	display: none; 
 }
 .word-input{
-	border: 1px solid black;
+	border: 1px solid #cccccc;
 	padding: 10px;
 	margin: 10px;
+	background-color: #ececec !important; 
+	width: 50% !important;
+}
+
+.word-input input[type="text"] {
+    width: 100% !important;
 }
